# MathBoardAlgoML

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: example.json  example_mini.json
models/: converted_model.tflite
src/: Grid.cpp  Grid.hpp  common.hpp  daemon.hpp  equation_solver.cpp  equation_solver.hpp  grid.cpp  grid.hpp  image_processing.cpp  image_processing.hpp  main.cpp  mnistLoader.cpp  mnistLoader.hpp  mnist_loader.cpp  mnist_loader.hpp  model.cpp  model.hpp  network.cpp  network.hpp  neural_network.py  opencv_helper.cpp  opencv_helper.hpp  prediction.hpp  run_unix_socket.cpp  run_unix_socket.hpp  stroke.cpp  stroke.hpp  symbol.hpp  symbol_processing.cpp  symbol_processing.hpp  unix_socket_init.cpp  unix_socket_init.hpp  unix_socket_server.cpp  unix_socket_server.hpp
src/helper/: run_unix_socket.cpp  solve_equation.hpp
src/py/: README.md  neural_network.py  requirements.txt
src/py/bhmsds/: CITATIONS.bib  TAGS.txt  bhmsds_dataset_builder.py  bhmsds_dataset_builder_test.py
src/unix_socket_server/: linux_unix_socket_server.cpp  linux_unix_socket_server.hpp  unix_socket_server.cpp  unix_socket_server.hpp
tesseract/: LeptonicaConfig.cmake  TesseractConfig.cmake
tests/: test_grid.cpp  test_unix_server_socket.cpp
